--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>Trimmer vs Non-Trimmer: A Comprehensive 2000-Word Comparison</h1>
+    <h1>Trimmer vs Non-Trimmer</h1>
 
     <div class="section">
         <h2>Introduction</h2>
