--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     </style>
 </head>
 <body>
-    <h1>Trimmer vs Non-Trimmer</h1>
+    <h1>Trimmer vs Non-Trimmer: A Comprehensive 2000-Word Comparison</h1>
 
     <div class="section">
         <h2>Introduction</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Electric_shaver_remington.jpg/640px-Electric_shaver_remington.jpg" alt="Grooming Concept">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Electric_shaver_remington.jpg" alt="Grooming Concept">
         </div>
         <p>When it comes to personal grooming, especially for men, the debate between using a trimmer and not using one (non-trimmer grooming methods) has gained significant traction. In this detailed comparison, we will evaluate both methods across various dimensions including convenience, cost, skin health, styling versatility, and more.</p>
     </div>
@@ -49,7 +49,7 @@
     <div class="section">
         <h2>What is a Trimmer?</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Trimmer_3.jpg/640px-Trimmer_3.jpg" alt="Electric Trimmer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/Trimmer_3.jpg" alt="Electric Trimmer">
         </div>
         <p>A trimmer is an electric grooming tool used to cut, shape, and maintain facial or body hair. It typically features adjustable blade lengths and is ideal for those who prefer a clean or semi-clean shave. Trimmers are available in corded or cordless versions and often come with different attachments for varied grooming styles.</p>
     </div>
@@ -57,7 +57,7 @@
     <div class="section">
         <h2>What is Non-Trimmer Grooming?</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/Safety_razor2.jpg/640px-Safety_razor2.jpg" alt="Traditional Razor">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Safety_razor2.jpg" alt="Traditional Razor">
         </div>
         <p>Non-trimmer grooming refers to traditional hair removal or shaving methods such as razors, scissors, waxing, or letting hair grow naturally. These methods vary greatly in terms of application, maintenance, and effectiveness, and are often chosen based on personal preference, budget, or cultural habits.</p>
     </div>
@@ -65,7 +65,7 @@
     <div class="section">
         <h2>Ease of Use</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Safety_razor_and_blade.jpg/640px-Safety_razor_and_blade.jpg" alt="Ease of Grooming">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/f/fd/Safety_razor_and_blade.jpg" alt="Ease of Grooming">
         </div>
         <ul>
             <li><strong>Trimmer:</strong> Very user-friendly; beginners can easily operate with minimal guidance. Offers quick grooming without much setup.</li>
@@ -76,7 +76,7 @@
     <div class="section">
         <h2>Cost</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Trimmer_set.jpg/640px-Trimmer_set.jpg" alt="Grooming Costs">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1c/Trimmer_set.jpg" alt="Grooming Costs">
         </div>
         <ul>
             <li><strong>Trimmer:</strong> Higher initial cost but low recurring expenses. One-time investment with occasional maintenance or replacement of blades.</li>
@@ -87,7 +87,7 @@
     <div class="section">
         <h2>Skin Safety</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Massage-face.jpg/640px-Massage-face.jpg" alt="Skin Health">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Massage-face.jpg" alt="Skin Health">
         </div>
         <ul>
             <li><strong>Trimmer:</strong> Lower risk of cuts and irritation; safer for sensitive skin. Less direct contact with skin compared to razors.</li>
@@ -98,7 +98,7 @@
     <div class="section">
         <h2>Styling and Versatility</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Barber_shop_in_Ethiopia.jpg/640px-Barber_shop_in_Ethiopia.jpg" alt="Beard Styling">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Barber_shop_in_Ethiopia.jpg" alt="Beard Styling">
         </div>
         <ul>
             <li><strong>Trimmer:</strong> Great for precision styling, beard shaping, and defining lines. Multiple attachments allow varied looks.</li>
@@ -149,7 +149,7 @@
     <div class="section">
         <h2>Conclusion</h2>
         <div class="image">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/26/Man_getting_a_beard_trim.jpg/640px-Man_getting_a_beard_trim.jpg" alt="Trimmer vs Non-Trimmer Conclusion">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/Man_getting_a_beard_trim.jpg" alt="Trimmer vs Non-Trimmer Conclusion">
         </div>
         <p>Both trimmer and non-trimmer grooming methods come with their own sets of pros and cons. If you value convenience, safety, and versatility, a trimmer is an excellent choice. For those who prefer traditional methods or are on a very tight budget, non-trimmer techniques may still be viable. Ultimately, the choice depends on personal grooming needs, budget, and lifestyle preferences. Understanding the nuances of each option empowers you to make the best decision for your grooming routine.</p>
     </div>
